# botds-openai

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  RUNBOOK.md  pyproject.toml  requirements.txt  test_system.py
.github/workflows/: test.yml
artifacts/: .gitkeep
botds/: __init__.py  cache.py  config.py  context.py  llm.py  pipeline.py  utils.py
botds/tools/: __init__.py  artifacts.py  budget.py  data_io.py  eval.py  features.py  metrics.py  modeling.py  pii.py  plotter.py  profiling.py
cache/: .gitkeep
cli/: __init__.py  run.py
configs/: breast_cancer.yaml  csv_template.yaml  diabetes.yaml  iris.yaml
schemas/: eda.schema.json  evaluation.schema.json  feature_plan.schema.json  ladder.schema.json  manifest.schema.json  profile.schema.json  report.schema.json  split_indices.schema.json
tests/: test_acceptance_suite.py  test_cache_and_invalidation.py  test_cross_dataset.py
